Simplify width mixins

--- a/src/mixins/_widths.scss
+++ b/src/mixins/_widths.scss
@@ -3,51 +3,28 @@
 //===================================================================
 
 $width-delimiter: \/ !default;
-
 $width-prefix: w- !default;
-
-$width-breakpoint-prefixes: (
-  small   : sm-,
-  medium  : md-,
-  large   : lg-,
-  xlarge  : xl-,
-  xxlarge : xxl-
-) !default;
-
 $width-util-denominators: (2, 3, 4, 5) !default;
 
 
-@mixin widths($denominator: 12, $prefix: $width-prefix, $inclusive: true) {
+@mixin width-classes($denominator, $prefix: $width-prefix, $inclusive: true) {
   @for $numerator from 1 through $denominator {
     @if $numerator < $denominator or $inclusive {
       .#{$prefix}#{$numerator}#{$width-delimiter}#{$denominator} {
-        width: $numerator / $denominator * 100%;
+        width: percentage($numerator / $denominator);
       }
     }
   }
 }
 
 
-@mixin widths-utils($prefix: $width-prefix) {
+@mixin width-util-classes($prefix: $width-prefix) {
   .#{$prefix}1#{$width-delimiter}1,
   .#{$prefix}full {
     width: 100%;
   }
 
   @each $denominator in $width-util-denominators {
-    @include widths($denominator, $prefix, $inclusive: false);
-  }
-}
-
-
-@mixin widths-responsive() {
-  @each $key, $value in $media-query-breakpoints {
-    $min: if($value == 0, null, $key);
-    $prefix: map-get($width-breakpoint-prefixes, $key);
-
-    @include media-query($min) {
-      @include widths($prefix: $prefix);
-      @include widths-utils($prefix: $prefix);
-    }
+    @include width-classes($denominator, $prefix, false);
   }
 }
