Misc. small refactorings

--- a/src/mixins/_buttons.scss
+++ b/src/mixins/_buttons.scss
@@ -1,5 +1,5 @@
 //===================================================================
-//  BUTTON
+//  BUTTONS
 //===================================================================
 
 // 1. Address `overflow` set to `hidden` in IE 8/9/10/11.
