Move elements to separate directory; fix issue with google maps images
Move elements to separate directory; fix issue with google maps images

--- a/src/elements/_anchor.scss
+++ b/src/elements/_anchor.scss
@@ -2,7 +2,7 @@
 //  ANCHOR
 //===================================================================
 
-// Remove the gray background color from active links in IE 10.
+// 1. Remove the gray background color from active links in IE 10.
 a {
-  background-color: transparent;
+  background: transparent; // [1]
 }
