--- a/src/elements/_html.scss
+++ b/src/elements/_html.scss
@@ -5,8 +5,8 @@
 // 1. Ensure the page always fills at least the entire height
 //    of the viewport.
 //
-// 2. Prevent iOS text size adjust after orientation change,
-//    without disabling user zoom.
+// 2. Prevent iOS and IE text size adjust after orientation
+//    change, without disabling user zoom.
 //
 // 3. Make font rendering behaviour on OSX more consistent with
 //    other systems that do not use sub-pixel anti-aliasing.
