Rename font-size var

--- a/src/functions/_em.scss
+++ b/src/functions/_em.scss
@@ -2,7 +2,7 @@
 //  EM
 //===================================================================
 
-@function em($pixel-value, $base: $base-font-size) {
+@function em($pixel-value, $base: $root-font-size) {
   $value: strip-unit($pixel-value);
 
   @if $value == 0 {
