--- a/src/_settings.scss
+++ b/src/_settings.scss
@@ -1,1 +1,5 @@
-$base-font-size: 16px !default;
+//===================================================================
+//  SETTINGS
+//===================================================================
+
+$root-font-size: 16px;
