--- a/src/functions/_rem.scss
+++ b/src/functions/_rem.scss
@@ -9,5 +9,5 @@
     @return $value;
   }
 
-  @return $value / strip-unit($base-font-size) * 1rem;
+  @return $value / strip-unit($root-font-size) * 1rem;
 }
