--- a/src/elements/_hr.scss
+++ b/src/elements/_hr.scss
@@ -1,5 +1,5 @@
 //===================================================================
-//  HR
+//  HORIZONTAL-RULE
 //===================================================================
 
 hr {
