--- a/src/functions/_em.scss
+++ b/src/functions/_em.scss
@@ -2,8 +2,11 @@
 //  EM
 //===================================================================
 
-@function em($pixel-value, $base: $root-font-size) {
-  $value: strip-unit($pixel-value);
+$root-font-size: 16px !default;
+
+
+@function em($value, $base: $root-font-size) {
+  $value: strip-unit($value);
 
   @if $value == 0 {
     @return $value;
