--- a/src/functions/_rem.scss
+++ b/src/functions/_rem.scss
@@ -2,8 +2,11 @@
 //  REM
 //===================================================================
 
-@function rem($pixel-value) {
-  $value: strip-unit($pixel-value);
+$root-font-size: 16px !default;
+
+
+@function rem($value) {
+  $value: strip-unit($value);
 
   @if $value == 0 {
     @return $value;
