Set background-color

--- a/src/elements/_a.scss
+++ b/src/elements/_a.scss
@@ -4,5 +4,5 @@
 
 // 1. Remove the gray background color from active links in IE 10.
 a {
-  background: transparent; // [1]
+  background-color: transparent; // [1]
 }
