Add mixins for flexbox

--- a/src/mixins.scss
+++ b/src/mixins.scss
@@ -1,10 +1,11 @@
 @import
 "mixins/buttons",
 "mixins/clearfix",
+"mixins/flexbox",
 "mixins/font-feature-settings",
 "mixins/font-smoothing",
 "mixins/grid",
 "mixins/media-query",
-"mixins/prefixed",
+"mixins/prefix",
 "mixins/selection",
 "mixins/widths";
