--- a/src/mixins/_prefix.scss
+++ b/src/mixins/_prefix.scss
@@ -1,5 +1,5 @@
 //===================================================================
-//  PREFIXED
+//  PREFIX
 //===================================================================
 
 @mixin prefixed($property, $value, $vendors: webkit moz) {
