--- a/src/mixins/_flexbox.scss
+++ b/src/mixins/_flexbox.scss
@@ -2,14 +2,29 @@
 //  FLEXBOX
 //===================================================================
 
+// for IE10 : mapping values to March 22, 2012 version of spec
+// http://www.w3.org/TR/2012/WD-css3-flexbox-20120322/
+$flex-2012-values: (
+  center        : center,
+  flex-end      : end,
+  flex-start    : start,
+  space-around  : distribute,
+  space-between : justify,
+  stretch       : stretch,
+  inherit       : inherit
+);
+
+
 // flex | inline-flex
 @mixin flex-display($value: flex) {
   @if $value == flex {
     display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
   }
   @else if $value == inline-flex {
     display: -webkit-inline-flex;
+    display: -ms-inline-flexbox;
     display: inline-flex;
   }
 }
@@ -17,14 +32,16 @@
 
 // flex-start | flex-end | center | baseline | stretch | inherit
 @mixin align-items($value: stretch) {
+  -webkit-align-items: $value;
+  -ms-flex-align: map-get($flex-2012-values, $value);
   align-items: $value;
-  -webkit-justify-content: $value;
 }
 
 
 // row | row-reverse | column | column-reverse | inherit
 @mixin flex-direction($value: row) {
   -webkit-flex-direction: $value;
+  -ms-flex-direction: $value;
   flex-direction: $value;
 }
 
@@ -32,6 +49,7 @@
 // flex-start | flex-end | center | space-between | space-around | inherit
 @mixin justify-content($value: flex-start) {
   -webkit-justify-content: $value;
+  -ms-flex-pack: map-get($flex-2012-values, $value);
   justify-content: $value;
 }
 
