--- a/src/mixins/_flexbox.scss
+++ b/src/mixins/_flexbox.scss
@@ -15,18 +15,17 @@ $flex-2012-values: (
 );
 
 
-// flex | inline-flex
-@mixin flex-display($value: flex) {
-  @if $value == flex {
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-  }
-  @else if $value == inline-flex {
-    display: -webkit-inline-flex;
-    display: -ms-inline-flexbox;
-    display: inline-flex;
-  }
+@mixin display-flex() {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+
+@mixin display-inline-flex() {
+  display: -webkit-inline-flex;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
 }
 
 
@@ -56,7 +55,7 @@ $flex-2012-values: (
 
 // Center child elements horizontally and vertically
 @mixin flex-center-all($direction: row) {
-  @include flex-display;
+  @include display-flex;
   @include flex-direction($direction);
   @include align-items(center);
   @include justify-content(center);
