Update aggregator files

--- a/src/_mixins.scss
+++ b/src/_mixins.scss
@@ -1,3 +1,7 @@
+//===================================================================
+//  MIXINS
+//===================================================================
+
 @import
 "mixins/buttons",
 "mixins/clearfix",
