--- a/src/mixins/_grid.scss
+++ b/src/mixins/_grid.scss
@@ -4,9 +4,7 @@
 
 $grid-max-width: 1000px !default;
 $grid-total-columns: 12 !default;
-
 $grid-gutter-size: 30px !default;
-$grid-gutter-half-size: ($grid-gutter-size / 2) !default;
 
 $grid-row-class: g-row !default;
 $grid-column-class: g-col !default;
@@ -22,6 +20,10 @@ $grid-include-push: true !default;
 $grid-include-responsive: true !default;
 
 
+// @param {number} $columns
+// @param {number} $total-columns [$grid-total-columns]
+// @returns {number} with `%` unit or 0
+//
 @function grid-column-width($columns, $total-columns: $grid-total-columns) {
   $width: percentage($columns / $total-columns);
 
@@ -33,10 +35,13 @@ $grid-include-responsive: true !default;
 }
 
 
-@mixin grid-row {
+// @param {number} $max-width [$grid-max-width]
+// @param {number} $gutter [$grid-gutter-size]
+//
+@mixin grid-row($max-width: $grid-max-width, $gutter: $grid-gutter-size) {
   margin: 0 auto;
   width: 100%;
-  max-width: $grid-max-width;
+  max-width: $max-width;
 
   &:before,
   &:after {
@@ -49,28 +54,36 @@ $grid-include-responsive: true !default;
   }
 
   & & {
-    margin: 0 (-$grid-gutter-half-size);
+    margin: 0 (-($gutter / 2));
     width: auto;
   }
 }
 
 
-@mixin grid-column($float: left) {
+// @param {string} $float [left]
+// @param {number} $gutter [$grid-gutter-size]
+//
+@mixin grid-column($float: left, $gutter: $grid-gutter-size) {
+  $half-gutter = $gutter / 2;
+
   float: $float;
   position: relative;
-  padding-left: $grid-gutter-half-size;
-  padding-right: $grid-gutter-half-size;
+  padding-left: $half-gutter;
+  padding-right: $half-gutter;
 }
 
 
 //===============================================
 // Grid column offset
 //===============================================
+
+// @param {number} $columns
 @mixin grid-offset($columns) {
   margin-left: grid-column-width($columns);
 }
 
 
+// @param {string|null} $prefix [null]
 @mixin grid-offset-classes($prefix: null) {
   @for $i from 0 to $grid-total-columns {
     $suffix: if($i > 0, $i + $width-delimiter + $grid-total-columns, 0);
@@ -84,12 +97,15 @@ $grid-include-responsive: true !default;
 //===============================================
 // Grid column pull
 //===============================================
+
+// @param {number} $columns
 @mixin grid-pull($columns) {
   left: auto;
   right: grid-column-width($columns);
 }
 
 
+// @param {string|null} $prefix [null]
 @mixin grid-pull-classes($prefix: null) {
   @for $i from 0 to $grid-total-columns {
     $suffix: if($i > 0, $i + $width-delimiter + $grid-total-columns, 0);
@@ -103,12 +119,15 @@ $grid-include-responsive: true !default;
 //===============================================
 // Grid column push
 //===============================================
+
+// @param {number} $columns
 @mixin grid-push($columns) {
   left: grid-column-width($columns);
   right: auto;
 }
 
 
+// @param {string|null} $prefix [null]
 @mixin grid-push-classes($prefix: null) {
   @for $i from 0 to $grid-total-columns {
     $suffix: if($i > 0, $i + $width-delimiter + $grid-total-columns, 0);
@@ -123,39 +142,56 @@ $grid-include-responsive: true !default;
 // Grid classes
 //===============================================
 @mixin grid-classes(
-  $include-row: $grid-include-row,
-  $include-column: $grid-include-column,
-  $include-offset: $grid-include-offset,
-  $include-pull: $grid-include-pull,
-  $include-push: $grid-include-push,
-  $include-responsive: $grid-include-responsive) {
+  $row: $grid-include-row,
+  $column: $grid-include-column,
+  $offset: $grid-include-offset,
+  $pull: $grid-include-pull,
+  $push: $grid-include-push,
+  $responsive: $grid-include-responsive) {
 
-  // row class
-  @if $include-row {
+
+  // row classes
+  @if $row {
     .#{$grid-row-class} {
       @include grid-row;
     }
   }
 
-  // column class
-  @if $include-column {
+
+  // column classes
+  @if $column {
     .#{$grid-column-class} {
       @include grid-column;
       width: 100%;
     }
   }
 
+
   // column widths
   @include width-classes($grid-total-columns);
   @include width-util-classes();
 
+
   // colum offset classes
-  @if $include-offset {
+  @if $offset {
     @include grid-offset-classes;
   }
 
+
+  // colum pull classes
+  @if $pull {
+    @include grid-pull-classes;
+  }
+
+
+  // colum push classes
+  @if $push {
+    @include grid-push-classes;
+  }
+
+
   // breakpoint-specific grid classes
-  @if $include-responsive {
+  @if $responsive {
     @each $key, $value in $breakpoints {
       $min: if($value == 0, null, $key);
       $prefix: map-get($breakpoint-prefixes, $key);
@@ -166,17 +202,17 @@ $grid-include-responsive: true !default;
         @include width-util-classes($prefix);
 
         // colum offset classes
-        @if $include-offset {
+        @if $offset {
           @include grid-offset-classes($prefix);
         }
 
         // column pull classes
-        @if $include-pull {
+        @if $pull {
           @include grid-pull-classes($prefix);
         }
 
         // column push classes
-        @if $include-push {
+        @if $push {
           @include grid-push-classes($prefix);
         }
       }
