--- a/src/mixins/_flexbox.scss
+++ b/src/mixins/_flexbox.scss
@@ -2,8 +2,10 @@
 //  FLEXBOX
 //===================================================================
 
-// for IE10 : mapping values to March 22, 2012 version of spec
-// http://www.w3.org/TR/2012/WD-css3-flexbox-20120322/
+// For IE10 : mapping values to March 22, 2012 version of spec.
+// @see: http://www.w3.org/TR/2012/WD-css3-flexbox-20120322/
+// @type {map}
+//
 $flex-2012-values: (
   center        : center,
   flex-end      : end,
@@ -15,21 +17,22 @@ $flex-2012-values: (
 );
 
 
-@mixin display-flex() {
+@mixin display-flex {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
 }
 
 
-@mixin display-inline-flex() {
+@mixin display-inline-flex {
   display: -webkit-inline-flex;
   display: -ms-inline-flexbox;
   display: inline-flex;
 }
 
 
-// flex-start | flex-end | center | baseline | stretch | inherit
+// @param {string} $value [stretch] - flex-start | flex-end | center | baseline | stretch | inherit
+//
 @mixin align-items($value: stretch) {
   -webkit-align-items: $value;
   -ms-flex-align: map-get($flex-2012-values, $value);
@@ -37,7 +40,8 @@ $flex-2012-values: (
 }
 
 
-// row | row-reverse | column | column-reverse | inherit
+// @param {string} $value [row] - row | row-reverse | column | column-reverse | inherit
+//
 @mixin flex-direction($value: row) {
   -webkit-flex-direction: $value;
   -ms-flex-direction: $value;
@@ -45,7 +49,8 @@ $flex-2012-values: (
 }
 
 
-// flex-start | flex-end | center | space-between | space-around | inherit
+// @param {string} $value [flex-start] - flex-start | flex-end | center | space-between | space-around | inherit
+//
 @mixin justify-content($value: flex-start) {
   -webkit-justify-content: $value;
   -ms-flex-pack: map-get($flex-2012-values, $value);
@@ -53,7 +58,9 @@ $flex-2012-values: (
 }
 
 
-// Center child elements horizontally and vertically
+// Center child elements horizontally and vertically.
+// @param {string} $direction [row] - row | column
+//
 @mixin flex-center-all($direction: row) {
   @include display-flex;
   @include flex-direction($direction);
