--- a/src/mixins/_font-smoothing.scss
+++ b/src/mixins/_font-smoothing.scss
@@ -2,6 +2,9 @@
 //  FONT-SMOOTHING
 //===================================================================
 
+// Make font rendering behaviour on OSX more consistent with
+// other systems that do not use sub-pixel anti-aliasing.
+//
 @mixin font-smoothing {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
