--- a/src/mixins/_media-query.scss
+++ b/src/mixins/_media-query.scss
@@ -2,6 +2,7 @@
 //  MEDIA-QUERY
 //===================================================================
 
+// @type {list}
 $breakpoints: (
   small  : 0,
   medium : 740px,
@@ -10,6 +11,7 @@ $breakpoints: (
 ) !default;
 
 
+// @type {list}
 $breakpoint-prefixes: (
   small  : sm-,
   medium : md-,
@@ -18,6 +20,8 @@ $breakpoint-prefixes: (
 ) !default;
 
 
+// @param {number} $value
+//
 @function media-query-width($value) {
   @if map-has-key($breakpoints, $value) {
     $value: map-get($breakpoints, $value);
@@ -31,6 +35,11 @@ $breakpoint-prefixes: (
 }
 
 
+// @param {number|null} $min [null]
+// @param {number|null} $max [null]
+// @param {string} $orientation [null]
+// @param {string} $type [null]
+//
 @mixin media-query($min: null, $max: null, $orientation: null, $type: 'screen') {
   $query: $type;
 
