--- a/src/mixins/_flexbox.scss
+++ b/src/mixins/_flexbox.scss
@@ -7,6 +7,7 @@
 // @type {map}
 //
 $flex-2012-values: (
+  baseline      : baseline,
   center        : center,
   flex-end      : end,
   flex-start    : start,
