--- a/src/mixins/_widths.scss
+++ b/src/mixins/_widths.scss
@@ -14,7 +14,7 @@ $width-util-denominators: (2, 3, 4, 5) !default;
 @mixin width-classes($denominator, $prefix: $width-prefix, $delimiter: $width-delimiter, $inclusive: true) {
   @for $numerator from 1 through $denominator {
     @if $numerator < $denominator or $inclusive {
-      .#{$prefix}#{$numerator}#{$width-delimiter}#{$denominator} {
+      .#{$prefix}#{$numerator}#{$delimiter}#{$denominator} {
         width: percentage($numerator / $denominator);
       }
     }
@@ -25,13 +25,13 @@ $width-util-denominators: (2, 3, 4, 5) !default;
 // @param {string} $prefix [$width-prefix]
 // @param {list} $denominators [$width-util-denominators]
 //
-@mixin width-util-classes($prefix: $width-prefix, $denominators: $width-util-denominators) {
+@mixin width-util-classes($prefix: $width-prefix, $delimiter: $width-delimiter, $denominators: $width-util-denominators) {
   .#{$prefix}1#{$width-delimiter}1,
   .#{$prefix}full {
     width: 100%;
   }
 
   @each $denominator in $denominators {
-    @include width-classes($denominator, $prefix, false);
+    @include width-classes($denominator, $prefix, $delimiter, false);
   }
 }
