Prune test files

--- a/test/test.scss
+++ b/test/test.scss
@@ -10,13 +10,8 @@
 "functions/strip-unit";
 
 @import
-"mixins/buttons",
 "mixins/clearfix",
 "mixins/flexbox",
-"mixins/font-feature-settings",
 "mixins/font-smoothing",
-"mixins/grid",
-"mixins/media-query",
 "mixins/prefix",
-"mixins/selection",
-"mixins/widths";
+"mixins/selection";
