Icon and visibility mixins
Icon helper mixin

--- a/src/_mixins.scss
+++ b/src/_mixins.scss
@@ -9,7 +9,9 @@
 "mixins/font-feature-settings",
 "mixins/font-smoothing",
 "mixins/grid",
+"mixins/icons",
 "mixins/media-query",
 "mixins/prefix",
 "mixins/selection",
+"mixins/visibility",
 "mixins/widths";
