--- a/test/mixins/_flexbox.scss
+++ b/test/mixins/_flexbox.scss
@@ -122,7 +122,7 @@ $spec-2012-values: (
     }
   }
 
-  @include test('flex-center-all: should add `display-flex`, `flex-direction`, `align-items`, and `justify-content`') {
+  @include test('flex-center-all: should add `display-flex`, `align-items`, and `justify-content`') {
     @include assert('') {
       @include input {
         @include flex-center-all;
@@ -133,11 +133,6 @@ $spec-2012-values: (
         display: -webkit-flex;
         display: -ms-flexbox;
         display: flex;
-
-        // flex-direction
-        -webkit-flex-direction: row;
-        -ms-flex-direction: row;
-        flex-direction: row;
 
         // align-items
         -webkit-align-items: center;
@@ -164,11 +159,6 @@ $spec-2012-values: (
         display: -ms-flexbox;
         display: flex;
 
-        // flex-direction
-        -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-        flex-direction: column;
-
         // align-items
         -webkit-align-items: center;
         -ms-flex-align: center;
@@ -178,6 +168,11 @@ $spec-2012-values: (
         -webkit-justify-content: center;
         -ms-flex-pack: center;
         justify-content: center;
+
+        // flex-direction
+        -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+        flex-direction: column;
       }
     }
   }
