Update aggregator files

--- a/src/_mixins.scss
+++ b/src/_mixins.scss
@@ -6,12 +6,14 @@
 "mixins/buttons",
 "mixins/clearfix",
 "mixins/flexbox",
+"mixins/font-awesome",
 "mixins/font-feature-settings",
 "mixins/font-smoothing",
 "mixins/grid",
-"mixins/icons",
+"mixins/keyframes",
 "mixins/media-query",
 "mixins/prefix",
 "mixins/selection",
-"mixins/visibility",
+"mixins/transform",
+"mixins/transition",
 "mixins/widths";
