--- a/src/_settings.scss
+++ b/src/_settings.scss
@@ -11,7 +11,7 @@ $base-line-height: 21px !default;
 
 
 //===============================================
-//  Grid
+//  GRID
 //===============================================
 //$grid-max-width: 1000px !default;
 //$grid-total-columns: 12 !default;
@@ -29,6 +29,26 @@ $base-line-height: 21px !default;
 //$grid-include-pull: true !default;
 //$grid-include-push: true !default;
 //$grid-include-responsive: true !default;
+
+
+//===============================================
+//  MEDIA-QUERY
+//===============================================
+
+//$breakpoints: (
+//  small  : 0,
+//  medium : 740px,
+//  large  : 980px,
+//  xlarge : 1300px
+//) !default;
+
+
+//$breakpoint-prefixes: (
+//  small  : sm-,
+//  medium : md-,
+//  large  : lg-,
+//  xlarge : xl-
+//) !default;
 
 
 //===============================================
