--- a/src/functions/_strip-unit.scss
+++ b/src/functions/_strip-unit.scss
@@ -3,7 +3,7 @@
 //===================================================================
 
 // @param {number} $value
-// @returns {number} unitless number
+// @returns {number} $value with unit removed
 //
 @function strip-unit($value) {
   @return $value / ($value * 0 + 1);
