--- a/src/mixins/_flexbox.scss
+++ b/src/mixins/_flexbox.scss
@@ -2,8 +2,11 @@
 //  FLEXBOX
 //===================================================================
 
-// For IE10 : mapping values to March 22, 2012 version of spec.
+// For IE10 : mapping of current spec values to March 22, 2012
+// version of spec.
+//
 // @see: http://www.w3.org/TR/2012/WD-css3-flexbox-20120322/
+//
 // @type {map}
 //
 $flex-2012-values: (
