--- a/src/functions/_em.scss
+++ b/src/functions/_em.scss
@@ -2,9 +2,13 @@
 //  EM
 //===================================================================
 
-// @param {number} $value - target value in pixels
+// @requires settings
+// @requires {function} strip-unit
+//
+// @param {number} $value - desired value in pixels
 // @param {number} $base [$root-font-size] - base font-size in pixels
-// @returns {number} with `em` unit or 0
+//
+// @returns {number} $value converted to em, or 0
 //
 @function em($value, $base: $root-font-size) {
   $value: strip-unit($value);
