--- a/src/mixins/_font-feature-settings.scss
+++ b/src/mixins/_font-feature-settings.scss
@@ -3,10 +3,9 @@
 //===================================================================
 
 // @see http://dev.w3.org/csswg/css-fonts-3/#propdef-font-feature-settings
+//
 // @param {list} $settings
 //
-@mixin font-feature-settings($settings...) {
-  -webkit-font-feature-settings: $settings;
-  -moz-font-feature-settings: $settings;
-  font-feature-settings: $settings;
+@mixin font-feature-settings($values...) {
+  @include prefix(font-feature-settings, $values, webkit moz);
 }
