Update import paths for examples

--- a/examples/scss/clearfix.scss
+++ b/examples/scss/clearfix.scss
@@ -1,10 +1,7 @@
 /*===================================================================
    EXAMPLE : CLEARFIX
 ===================================================================*/
-@import
-"../../lib/settings",
-"../../lib/functions",
-"../../lib/mixins";
+@import "imports";
 
 
 .example-1 {
