--- a/examples/scss/font-awesome.scss
+++ b/examples/scss/font-awesome.scss
@@ -1,10 +1,7 @@
 /*===================================================================
    EXAMPLE : FONT-AWESOME
 ===================================================================*/
-@import
-"../../lib/settings",
-"../../lib/functions",
-"../../lib/mixins";
+@import "imports";
 
 
 /* @include fa-icon-base; */
