--- a/examples/scss/selection.scss
+++ b/examples/scss/selection.scss
@@ -1,10 +1,7 @@
 /*===================================================================
    EXAMPLE : SELECTION
 ===================================================================*/
-@import
-"../../lib/settings",
-"../../lib/functions",
-"../../lib/mixins";
+@import "imports";
 
 
 /* @include selection { ... }; */
