--- a/examples/scss/transform.scss
+++ b/examples/scss/transform.scss
@@ -1,10 +1,7 @@
 /*===================================================================
    EXAMPLE : TRANSFORM
 ===================================================================*/
-@import
-"../../lib/settings",
-"../../lib/functions",
-"../../lib/mixins";
+@import "imports";
 
 
 
