--- a/examples/scss/transition.scss
+++ b/examples/scss/transition.scss
@@ -1,10 +1,7 @@
 /*===================================================================
    EXAMPLE : TRANSITION
 ===================================================================*/
-@import
-"../../lib/settings",
-"../../lib/functions",
-"../../lib/mixins";
+@import "imports";
 
 
 
