--- a/examples/scss/font-feature-settings.scss
+++ b/examples/scss/font-feature-settings.scss
@@ -1,10 +1,7 @@
 /*===================================================================
    EXAMPLE : FONT-FEATURE-SETTINGS
 ===================================================================*/
-@import
-"../../lib/settings",
-"../../lib/functions",
-"../../lib/mixins";
+@import "imports";
 
 
 .example-1 {
