--- a/examples/scss/prefix.scss
+++ b/examples/scss/prefix.scss
@@ -1,10 +1,7 @@
 /*===================================================================
    EXAMPLE : PREFIX
 ===================================================================*/
-@import
-"../../lib/settings",
-"../../lib/functions",
-"../../lib/mixins";
+@import "imports";
 
 
 .example-1 {
