Add customizable settings to examples files

--- a/examples/scss/media-query.scss
+++ b/examples/scss/media-query.scss
@@ -1,7 +1,9 @@
 /*===================================================================
    EXAMPLE : MEDIA-QUERY
 ===================================================================*/
-
+//===============================================
+//  Default settings
+//-----------------------------------------------
 $breakpoints: (
   small  : 0,
   medium : 740px,
