--- a/examples/scss/widths.scss
+++ b/examples/scss/widths.scss
@@ -1,6 +1,15 @@
 /*===================================================================
    EXAMPLE : WIDTHS
 ===================================================================*/
+//===============================================
+//  Default settings
+//-----------------------------------------------
+
+$width-delimiter: \/ !default;
+$width-prefix: w- !default;
+$width-util-denominators: (2, 3, 4, 5) !default;
+
+
 @import "imports";
 
 
