--- a/examples/css/keyframes.css
+++ b/examples/css/keyframes.css
@@ -1,6 +1,7 @@
 /*===================================================================
    EXAMPLE : KEYFRAMES
 ===================================================================*/
+/* @include keyframes(example-1) { ... } */
 @-webkit-keyframes example-1 {
   0% {
     opacity: 0;
