--- a/examples/scss/keyframes.scss
+++ b/examples/scss/keyframes.scss
@@ -8,11 +8,11 @@
 @include keyframes(example-1) {
   0% {
     opacity: 0;
-    @include transform(scale(0.001));
+    transform: scale(0.001);
   }
 
   100% {
     opacity: 1;
-    @include transform(scale(1));
+    transform: scale(1);
   }
 }
