--- a/examples/scss/media-query.scss
+++ b/examples/scss/media-query.scss
@@ -23,41 +23,65 @@ $breakpoint-prefixes: (
 @import "imports";
 
 
-/* @include media-query(medium, large) */
-@include media-query(medium, large) {
+/* @include media-query { ... } */
+@include media-query {
   .example-1 {
     font-size: 14px;
   }
 };
 
 
-/* @include media-query(600, 800px) */
-@include media-query(600, 800px) {
+/* @include media-query(medium) { ... } */
+@include media-query(medium) {
   .example-2 {
     font-size: 14px;
   }
 };
 
 
-/* @include media-query($max: medium) */
-@include media-query($max: medium) {
+/* @include media-query(medium, large) { ... } */
+@include media-query(medium, large) {
   .example-3 {
     font-size: 14px;
   }
 };
 
 
-/* @include media-query(medium, $orientation: landscape) */
-@include media-query(medium, $orientation: landscape) {
+/* @include media-query(600, 800px) { ... } */
+@include media-query(600, 800px) {
   .example-4 {
     font-size: 14px;
   }
 };
 
 
-/* @include media-query($type: print) */
-@include media-query($type: print) {
+/* @include media-query($max: medium) { ... } */
+@include media-query($max: medium) {
   .example-5 {
+    font-size: 14px;
+  }
+};
+
+
+/* @include media-query($orientation: landscape) { ... } */
+@include media-query($orientation: landscape) {
+  .example-6 {
+    font-size: 14px;
+  }
+};
+
+
+/* @include media-query(medium, $pixel-ratio: 1.3) { ... } */
+@include media-query(medium, $pixel-ratio: 1.3) {
+  .example-7 {
+    font-size: 14px;
+  }
+}
+
+
+/* @include media-query($type: print) { ... } */
+@include media-query($type: print) {
+  .example-8 {
     color: #000;
   }
 };
@@ -65,13 +89,11 @@ $breakpoint-prefixes: (
 
 /*
   .example-6 {
-    font-size: 17px;
-    @include media-query(small) {
-      font-size: 14px;
-    };
+    font-size: 17px
+    @include media-query(small) { font-size: 14px; }
   }
 */
-.example-6 {
+.example-9 {
   font-size: 17px;
 
   @include media-query(small) {
