--- a/src/mixins/_media-query.scss
+++ b/src/mixins/_media-query.scss
@@ -20,6 +20,11 @@ $breakpoint-prefixes: (
 ) !default;
 
 
+// Default set to 1.3 for Google Nexus 7
+// @see http://bjango.com/articles/min-device-pixel-ratio
+$min-device-pixel-ratio: 1.3 !default;
+
+
 // @requires {function} em
 //
 // @param {number} $value
@@ -42,22 +47,26 @@ $breakpoint-prefixes: (
 // @param {string} $orientation [null]
 // @param {string} $type [null]
 //
-@mixin media-query($min: null, $max: null, $orientation: null, $type: 'screen') {
+@mixin media-query($min: null, $max: null, $orientation: null, $pixel-ratio: null, $type: 'screen') {
   $query: $type;
 
-  @if $min != null {
+  @if $pixel-ratio {
+    $query: $query + ' and (min-resolution: #{$pixel-ratio * 1dppx})';
+  }
+
+  @if $min {
     $min-width: media-query-width($min);
     @if $min-width > 0 {
       $query: $query + ' and (min-width: #{$min-width})';
     }
   }
 
-  @if $max != null {
+  @if $max {
     $max-width: media-query-width($max) - .01em;
     $query: $query + ' and (max-width: #{$max-width})';
   }
 
-  @if $orientation != null {
+  @if $orientation {
     $query: $query + ' and (orientation: #{$orientation})';
   }
 
