--- a/examples/scss/media-query.scss
+++ b/examples/scss/media-query.scss
@@ -39,9 +39,17 @@ $breakpoint-prefixes: (
 };
 
 
+/* @include media-query($max: medium) { ... } */
+@include media-query($max: medium) {
+  .example-3 {
+    font-size: 14px;
+  }
+};
+
+
 /* @include media-query(medium, large) { ... } */
 @include media-query(medium, large) {
-  .example-3 {
+  .example-4 {
     font-size: 14px;
   }
 };
@@ -49,23 +57,23 @@ $breakpoint-prefixes: (
 
 /* @include media-query(600, 800px) { ... } */
 @include media-query(600, 800px) {
-  .example-4 {
-    font-size: 14px;
-  }
-};
-
-
-/* @include media-query($max: medium) { ... } */
-@include media-query($max: medium) {
   .example-5 {
     font-size: 14px;
   }
 };
 
 
-/* @include media-query($orientation: landscape) { ... } */
-@include media-query($orientation: landscape) {
+/* @include media-query(medium, large, $orientation: landscape) { ... } */
+@include media-query(medium, large, $orientation: landscape) {
   .example-6 {
+    font-size: 14px;
+  }
+};
+
+
+/* @include media-query($orientation: portrait) { ... } */
+@include media-query($orientation: portrait) {
+  .example-7 {
     font-size: 14px;
   }
 };
@@ -73,7 +81,7 @@ $breakpoint-prefixes: (
 
 /* @include media-query(medium, $pixel-ratio: 1.3) { ... } */
 @include media-query(medium, $pixel-ratio: 1.3) {
-  .example-7 {
+  .example-8 {
     font-size: 14px;
   }
 }
@@ -81,19 +89,19 @@ $breakpoint-prefixes: (
 
 /* @include media-query($type: print) { ... } */
 @include media-query($type: print) {
-  .example-8 {
+  .example-9 {
     color: #000;
   }
 };
 
 
 /*
-  .example-6 {
+  .example-10 {
     font-size: 17px
     @include media-query(small) { font-size: 14px; }
   }
 */
-.example-9 {
+.example-10 {
   font-size: 17px;
 
   @include media-query(small) {
