Add clearfix placeholder

--- a/src/utils/_clearfix.scss
+++ b/src/utils/_clearfix.scss
@@ -2,6 +2,11 @@
 //  UTILS : CLEARFIX
 //===================================================================
 
-.u-clear {
+%clearfix {
   @include clearfix;
+}
+
+
+.u-clear {
+  @extend %clearfix;
 }
