--- a/src/elements/_body.scss
+++ b/src/elements/_body.scss
@@ -6,4 +6,5 @@ body {
   font-family: $base-font-family;
   font-size: ($base-font-size / $root-font-size) * 1rem;
   line-height: $base-line-height / $base-font-size;
+  color: $base-font-color;
 }
