chore: misc. updates
- update fontawesome unicode mappings
- update gulp tasks
- update package dependencies

--- a/examples/css/font-awesome.css
+++ b/examples/css/font-awesome.css
@@ -8,6 +8,7 @@
   font-family: FontAwesome;
   font-size: inherit;
   text-rendering: auto;
+  text-decoration: none;
   -webkit-transform: translate(0, 0);
       -ms-transform: translate(0, 0);
           transform: translate(0, 0); }
@@ -26,6 +27,7 @@
   font-family: FontAwesome;
   font-size: inherit;
   text-rendering: auto;
+  text-decoration: none;
   -webkit-transform: translate(0, 0);
       -ms-transform: translate(0, 0);
           transform: translate(0, 0); }
