--- a/src/_elements.scss
+++ b/src/_elements.scss
@@ -3,10 +3,10 @@
 //===================================================================
 
 @import
-"elements/html",
-"elements/body",
-"elements/a",
-"elements/button",
-"elements/hr",
-"elements/img",
-"elements/table";
+'elements/html',
+'elements/body',
+'elements/a',
+'elements/button',
+'elements/hr',
+'elements/img',
+'elements/table';
