--- a/src/_functions.scss
+++ b/src/_functions.scss
@@ -3,6 +3,6 @@
 //===================================================================
 
 @import
-"functions/em",
-"functions/rem",
-"functions/strip-unit";
+'functions/em',
+'functions/rem',
+'functions/strip-unit';
