--- a/src/_mixins.scss
+++ b/src/_mixins.scss
@@ -3,11 +3,12 @@
 //===================================================================
 
 @import
-"mixins/buttons",
-"mixins/clearfix",
-"mixins/flexbox",
-"mixins/font-awesome",
-"mixins/font-smoothing",
-"mixins/grid",
-"mixins/media-query",
-"mixins/widths";
+'mixins/buttons',
+'mixins/clearfix',
+'mixins/flexbox',
+'mixins/font-awesome',
+'mixins/font-smoothing',
+'mixins/grid',
+'mixins/media-query',
+'mixins/visibility',
+'mixins/widths';
