--- a/src/_utils.scss
+++ b/src/_utils.scss
@@ -3,6 +3,6 @@
 //===================================================================
 
 @import
-"utils/accessibility",
-"utils/clearfix",
-"utils/text";
+'utils/accessibility',
+'utils/clearfix',
+'utils/text';
