--- a/examples/css/grid-classes.css
+++ b/examples/css/grid-classes.css
@@ -8,8 +8,7 @@
   margin: 0 auto;
   width: 100%;
   max-width: 1000px; }
-  .g-row:before,
-  .g-row:after {
+  .g-row:before, .g-row:after {
     content: '';
     display: table; }
   .g-row:after {
