--- a/src/mixins/_font-awesome.scss
+++ b/src/mixins/_font-awesome.scss
@@ -8,12 +8,14 @@
 
 // @type {map} - mapping of icon names to unicode characters
 $fa-icons: (
+  500px: '\f26e',
   adjust: '\f042',
   adn: '\f170',
   align-center: '\f037',
   align-justify: '\f039',
   align-left: '\f036',
   align-right: '\f038',
+  amazon: '\f270',
   ambulance: '\f0f9',
   anchor: '\f13d',
   android: '\f17b',
@@ -49,12 +51,23 @@ $fa-icons: (
   at: '\f1fa',
   automobile: '\f1b9',
   backward: '\f04a',
+  balance-scale: '\f24e',
   ban: '\f05e',
   bank: '\f19c',
   bar-chart: '\f080',
   bar-chart-o: '\f080',
   barcode: '\f02a',
   bars: '\f0c9',
+  battery-0: '\f244',
+  battery-1: '\f243',
+  battery-2: '\f242',
+  battery-3: '\f241',
+  battery-4: '\f240',
+  battery-empty: '\f244',
+  battery-full: '\f240',
+  battery-half: '\f242',
+  battery-quarter: '\f243',
+  battery-three-quarters: '\f241',
   bed: '\f236',
   beer: '\f0fc',
   behance: '\f1b4',
@@ -69,6 +82,9 @@ $fa-icons: (
   bitbucket: '\f171',
   bitbucket-square: '\f172',
   bitcoin: '\f15a',
+  black-tie: '\f27e',
+  bluetooth: '\f293',
+  bluetooth-b: '\f294',
   bold: '\f032',
   bolt: '\f0e7',
   bomb: '\f1e2',
@@ -87,7 +103,11 @@ $fa-icons: (
   cab: '\f1ba',
   calculator: '\f1ec',
   calendar: '\f073',
+  calendar-check-o: '\f274',
+  calendar-minus-o: '\f272',
   calendar-o: '\f133',
+  calendar-plus-o: '\f271',
+  calendar-times-o: '\f273',
   camera: '\f030',
   camera-retro: '\f083',
   car: '\f1b9',
@@ -103,7 +123,9 @@ $fa-icons: (
   cart-plus: '\f217',
   cc: '\f20a',
   cc-amex: '\f1f3',
+  cc-diners-club: '\f24c',
   cc-discover: '\f1f2',
+  cc-jcb: '\f24b',
   cc-mastercard: '\f1f1',
   cc-paypal: '\f1f4',
   cc-stripe: '\f1f5',
@@ -125,12 +147,14 @@ $fa-icons: (
   chevron-right: '\f054',
   chevron-up: '\f077',
   child: '\f1ae',
+  chrome: '\f268',
   circle: '\f111',
   circle-o: '\f10c',
   circle-o-notch: '\f1ce',
   circle-thin: '\f1db',
   clipboard: '\f0ea',
   clock-o: '\f017',
+  clone: '\f24d',
   close: '\f00d',
   cloud: '\f0c2',
   cloud-download: '\f0ed',
@@ -139,20 +163,26 @@ $fa-icons: (
   code: '\f121',
   code-fork: '\f126',
   codepen: '\f1cb',
+  codiepie: '\f284',
   coffee: '\f0f4',
   cog: '\f013',
   cogs: '\f085',
   columns: '\f0db',
   comment: '\f075',
   comment-o: '\f0e5',
+  commenting: '\f27a',
+  commenting-o: '\f27b',
   comments: '\f086',
   comments-o: '\f0e6',
   compass: '\f14e',
   compress: '\f066',
   connectdevelop: '\f20e',
+  contao: '\f26d',
   copy: '\f0c5',
   copyright: '\f1f9',
+  creative-commons: '\f25e',
   credit-card: '\f09d',
+  credit-card-alt: '\f283',
   crop: '\f125',
   crosshairs: '\f05b',
   css3: '\f13c',
@@ -175,6 +205,7 @@ $fa-icons: (
   dribbble: '\f17d',
   dropbox: '\f16b',
   drupal: '\f1a9',
+  edge: '\f282',
   edit: '\f044',
   eject: '\f052',
   ellipsis-h: '\f141',
@@ -191,6 +222,7 @@ $fa-icons: (
   exclamation-circle: '\f06a',
   exclamation-triangle: '\f071',
   expand: '\f065',
+  expeditedssl: '\f23e',
   external-link: '\f08e',
   external-link-square: '\f14c',
   eye: '\f06e',
@@ -203,6 +235,7 @@ $fa-icons: (
   fast-backward: '\f049',
   fast-forward: '\f050',
   fax: '\f1ac',
+  feed: '\f09e',
   female: '\f182',
   fighter-jet: '\f0fb',
   file: '\f15b',
@@ -228,6 +261,7 @@ $fa-icons: (
   filter: '\f0b0',
   fire: '\f06d',
   fire-extinguisher: '\f134',
+  firefox: '\f269',
   flag: '\f024',
   flag-checkered: '\f11e',
   flag-o: '\f11d',
@@ -240,6 +274,8 @@ $fa-icons: (
   folder-open: '\f07c',
   folder-open-o: '\f115',
   font: '\f031',
+  fonticons: '\f280',
+  fort-awesome: '\f286',
   forumbee: '\f211',
   forward: '\f04e',
   foursquare: '\f180',
@@ -251,7 +287,10 @@ $fa-icons: (
   ge: '\f1d1',
   gear: '\f013',
   gears: '\f085',
-  genderless: '\f1db',
+  genderless: '\f22d',
+  get-pocket: '\f265',
+  gg: '\f260',
+  gg-circle: '\f261',
   gift: '\f06b',
   git: '\f1d3',
   git-square: '\f1d2',
@@ -270,10 +309,20 @@ $fa-icons: (
   group: '\f0c0',
   h-square: '\f0fd',
   hacker-news: '\f1d4',
+  hand-grab-o: '\f255',
+  hand-lizard-o: '\f258',
   hand-o-down: '\f0a7',
   hand-o-left: '\f0a5',
   hand-o-right: '\f0a4',
   hand-o-up: '\f0a6',
+  hand-paper-o: '\f256',
+  hand-peace-o: '\f25b',
+  hand-pointer-o: '\f25a',
+  hand-rock-o: '\f255',
+  hand-scissors-o: '\f257',
+  hand-spock-o: '\f259',
+  hand-stop-o: '\f256',
+  hashtag: '\f292',
   hdd-o: '\f0a0',
   header: '\f1dc',
   headphones: '\f025',
@@ -284,16 +333,29 @@ $fa-icons: (
   home: '\f015',
   hospital-o: '\f0f8',
   hotel: '\f236',
+  hourglass: '\f254',
+  hourglass-1: '\f251',
+  hourglass-2: '\f252',
+  hourglass-3: '\f253',
+  hourglass-end: '\f253',
+  hourglass-half: '\f252',
+  hourglass-o: '\f250',
+  hourglass-start: '\f251',
+  houzz: '\f27c',
   html5: '\f13b',
+  i-cursor: '\f246',
   ils: '\f20b',
   image: '\f03e',
   inbox: '\f01c',
   indent: '\f03c',
+  industry: '\f275',
   info: '\f129',
   info-circle: '\f05a',
   inr: '\f156',
   instagram: '\f16d',
   institution: '\f19c',
+  internet-explorer: '\f26b',
+  intersex: '\f224',
   ioxhost: '\f208',
   italic: '\f033',
   joomla: '\f1aa',
@@ -338,7 +400,11 @@ $fa-icons: (
   mail-reply: '\f112',
   mail-reply-all: '\f122',
   male: '\f183',
+  map: '\f279',
   map-marker: '\f041',
+  map-o: '\f278',
+  map-pin: '\f276',
+  map-signs: '\f277',
   mars: '\f222',
   mars-double: '\f227',
   mars-stroke: '\f229',
@@ -356,17 +422,27 @@ $fa-icons: (
   minus-circle: '\f056',
   minus-square: '\f146',
   minus-square-o: '\f147',
+  mixcloud: '\f289',
   mobile: '\f10b',
   mobile-phone: '\f10b',
+  modx: '\f285',
   money: '\f0d6',
   moon-o: '\f186',
   mortar-board: '\f19d',
   motorcycle: '\f21c',
+  mouse-pointer: '\f245',
   music: '\f001',
   navicon: '\f0c9',
   neuter: '\f22c',
   newspaper-o: '\f1ea',
+  object-group: '\f247',
+  object-ungroup: '\f248',
+  odnoklassniki: '\f263',
+  odnoklassniki-square: '\f264',
+  opencart: '\f23d',
   openid: '\f19b',
+  opera: '\f26a',
+  optin-monster: '\f23c',
   outdent: '\f03b',
   pagelines: '\f18c',
   paint-brush: '\f1fc',
@@ -376,11 +452,14 @@ $fa-icons: (
   paragraph: '\f1dd',
   paste: '\f0ea',
   pause: '\f04c',
+  pause-circle: '\f28b',
+  pause-circle-o: '\f28c',
   paw: '\f1b0',
   paypal: '\f1ed',
   pencil: '\f040',
   pencil-square: '\f14b',
   pencil-square-o: '\f044',
+  percent: '\f295',
   phone: '\f095',
   phone-square: '\f098',
   photo: '\f03e',
@@ -402,6 +481,7 @@ $fa-icons: (
   plus-square-o: '\f196',
   power-off: '\f011',
   print: '\f02f',
+  product-hunt: '\f288',
   puzzle-piece: '\f12e',
   qq: '\f1d6',
   qrcode: '\f029',
@@ -414,8 +494,10 @@ $fa-icons: (
   rebel: '\f1d0',
   recycle: '\f1b8',
   reddit: '\f1a1',
+  reddit-alien: '\f281',
   reddit-square: '\f1a2',
   refresh: '\f021',
+  registered: '\f25d',
   remove: '\f00d',
   renren: '\f18b',
   reorder: '\f0c9',
@@ -434,8 +516,10 @@ $fa-icons: (
   rub: '\f158',
   ruble: '\f158',
   rupee: '\f156',
+  safari: '\f267',
   save: '\f0c7',
   scissors: '\f0c4',
+  scribd: '\f28a',
   search: '\f002',
   search-minus: '\f010',
   search-plus: '\f00e',
@@ -453,6 +537,8 @@ $fa-icons: (
   shield: '\f132',
   ship: '\f21a',
   shirtsinbulk: '\f214',
+  shopping-bag: '\f290',
+  shopping-basket: '\f291',
   shopping-cart: '\f07a',
   sign-in: '\f090',
   sign-out: '\f08b',
@@ -497,7 +583,11 @@ $fa-icons: (
   step-backward: '\f048',
   step-forward: '\f051',
   stethoscope: '\f0f1',
+  sticky-note: '\f249',
+  sticky-note-o: '\f24a',
   stop: '\f04d',
+  stop-circle: '\f28d',
+  stop-circle-o: '\f28e',
   street-view: '\f21d',
   strikethrough: '\f0cc',
   stumbleupon: '\f1a4',
@@ -515,6 +605,7 @@ $fa-icons: (
   tags: '\f02c',
   tasks: '\f0ae',
   taxi: '\f1ba',
+  television: '\f26c',
   tencent-weibo: '\f1d5',
   terminal: '\f120',
   text-height: '\f034',
@@ -538,6 +629,7 @@ $fa-icons: (
   toggle-on: '\f205',
   toggle-right: '\f152',
   toggle-up: '\f151',
+  trademark: '\f25c',
   train: '\f238',
   transgender: '\f224',
   transgender-alt: '\f225',
@@ -545,6 +637,7 @@ $fa-icons: (
   trash-o: '\f014',
   tree: '\f1bb',
   trello: '\f181',
+  tripadvisor: '\f262',
   trophy: '\f091',
   truck: '\f0d1',
   try: '\f195',
@@ -552,6 +645,7 @@ $fa-icons: (
   tumblr: '\f173',
   tumblr-square: '\f174',
   turkish-lira: '\f195',
+  tv: '\f26c',
   twitch: '\f1e8',
   twitter: '\f099',
   twitter-square: '\f081',
@@ -564,6 +658,7 @@ $fa-icons: (
   unlock-alt: '\f13e',
   unsorted: '\f0dc',
   upload: '\f093',
+  usb: '\f287',
   usd: '\f155',
   user: '\f007',
   user-md: '\f0f0',
@@ -576,6 +671,7 @@ $fa-icons: (
   venus-mars: '\f228',
   viacoin: '\f237',
   video-camera: '\f03d',
+  vimeo: '\f27d',
   vimeo-square: '\f194',
   vine: '\f1ca',
   vk: '\f189',
@@ -589,18 +685,23 @@ $fa-icons: (
   whatsapp: '\f232',
   wheelchair: '\f193',
   wifi: '\f1eb',
+  wikipedia-w: '\f266',
   windows: '\f17a',
   won: '\f159',
   wordpress: '\f19a',
   wrench: '\f0ad',
   xing: '\f168',
   xing-square: '\f169',
+  y-combinator: '\f23b',
+  y-combinator-square: '\f1d4',
   yahoo: '\f19e',
+  yc: '\f23b',
+  yc-square: '\f1d4',
   yelp: '\f1e9',
   yen: '\f157',
   youtube: '\f167',
   youtube-play: '\f16a',
-  youtube-square: '\f166'
+  youtube-square: '\f166',
 );
 
 
@@ -615,7 +716,7 @@ $fa-icons: (
   font-size: inherit;
   text-rendering: auto;       // [1]
   text-decoration: none;
-  transform: translate(0, 0); // [3]
+  transform: translate(0, 0); // [2]
 }
 
 
