--- a/examples/css/media-query.css
+++ b/examples/css/media-query.css
@@ -37,7 +37,7 @@
     font-size: 14px; } }
 
 /* @include media-query(medium, $pixel-ratio: 1.3) { ... } */
-@media screen and (-webkit-min-device-pixel-ratio: 1.3) and (min-width: 46.25em), screen and (min-resolution: 1.3dppx) and (min-width: 46.25em) {
+@media screen and (-webkit-min-device-pixel-ratio: 1.3) and (min-width: 46.25em), screen and (-o-min-device-pixel-ratio: 13/10) and (min-width: 46.25em), screen and (min-resolution: 1.3dppx) and (min-width: 46.25em) {
   .example-8 {
     font-size: 14px; } }
 
